# iacquabotsim

./: README.md
iacquabot/: CMakeLists.txt  package.xml
iacquabot/config/: ekf.yaml  settings.yaml
iacquabot/launch/: joy.launch  no_gui_control.launch  odom.launch  pos_control.launch  rviz.launch  salm.launch  sandisland.launch  sydneyregatta.launch  tag_control.launch  tag_to_pose.launch  trayectory_traking.launch  vel_control.launch  vel_tag_control.launch
iacquabot/scripts/Basic_controllers/: cmd_dynamic_controller.py
iacquabot/scripts/Basic_system/: cam_to_pose.py  cmd_update.py  gps_imu_to_odom.py  joy_control.py  orbit_cam.py  signal_callback.py  station.py  tag_control.py  tag_goal_node.py  udp_ros.py  update_vel_joy.py  world2body.py
iacquabot/scripts/examples/: PathFollowe.py  trayectory.py  view_trayectory.py
iacquabot/src/: position_controller.cpp  thruster_signals.cpp  velocity_controller.cpp  world2body.cpp
usv_description/: CMakeLists.txt  package.xml
usv_description/urdf/: wamv_base.urdf.xacro
usv_description/urdf/thrusters/: engine.xacro
usv_gazebo/: CMakeLists.txt  package.xml
usv_gazebo/config/: iacquabot.rviz  rviz_vrx.rviz
usv_gazebo/launch/: rviz_vrx.launch
usv_gazebo/urdf/: macros.xacro  wamv_gazebo.urdf.xacro  wamv_gazebo.xacro
usv_gazebo/urdf/components/: lidar.xacro  sublidar.xacro  wamv_gps.xacro  wamv_imu.xacro
usv_gazebo/urdf/dynamics/: wamv_gazebo_dynamics_plugin.xacro
usv_gazebo/urdf/thruster_layouts/: wamv_aft_thrusters.xacro  wamv_gazebo_thruster_config.xacro  wamv_t_thrusters.xacro  wamv_x_thrusters.xacro
