<?xml version="1.0"?>
<package format="2">
  <name>usv_description</name>
  <version>0.0.0</version>
  <description>The usv_description package</description>
  <maintainer email="brayanjavsa@gmail.com">Brayan Saldarriaga</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
</package>

